--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="cn.zju.id21732092.chenzhongqi">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,15 +14,25 @@
         <activity
             android:name=".HelloActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".StatusActivity">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".StatusActivity"
+            android:label="发布微博">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CalcActivity">
+        <activity
+            android:name=".CalcActivity"
+            android:label="简易计算器" />
+        <activity
+            android:name=".FileWriteActivity"
+            android:label="文件测试">
+
+        </activity>
+        <activity android:name=".SettingsActivity">
 
         </activity>
     </application>
