--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,21 +18,23 @@
         <activity
             android:name=".StatusActivity"
             android:label="发布微博">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".CalcActivity"
             android:label="简易计算器" />
         <activity
             android:name=".FileWriteActivity"
-            android:label="文件测试">
+            android:label="文件测试"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".MusicActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity">
+        <activity android:name=".Music2Activity">
 
         </activity>
     </application>
